<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UpdateActivity">

    <TextView
        android:id="@+id/updateFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Hike"
        android:textColor="@color/material_dynamic_primary30"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateFragment" />

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="359dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

    <EditText
        android:id="@+id/locationTxt"
        android:layout_width="359dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTxt" />

    <TextView
        android:id="@+id/dateTxt"
        android:layout_width="358dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        tools:text="@tools:sample/date/ddmmyy" />

    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:text="@string/length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/lengthTxt"
        android:layout_width="359dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/length" />

    <TextView
        android:id="@+id/parkingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/isParking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/length" />

    <RadioGroup
        android:id="@+id/parkingGroup"
        android:layout_width="175dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toEndOf="@+id/parkingTxt"
        app:layout_constraintTop_toBottomOf="@+id/lengthTxt">

        <RadioButton
            android:id="@+id/yesValue"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="Yes"
            android:textSize="12sp"
            android:tag="true"/>

        <RadioButton
            android:id="@+id/noValue"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="No"
            android:textSize="12sp"
            android:tag="false"/>

    </RadioGroup>

    <TextView
        android:id="@+id/levelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkingTxt" />

    <Spinner
        android:id="@+id/levelSpinner"
        android:layout_width="198dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:entries="@array/levelSpinner"
        app:layout_constraintStart_toEndOf="@+id/levelTxt"
        app:layout_constraintTop_toBottomOf="@+id/parkingGroup" />

    <EditText
        android:id="@+id/descriptionTxt"
        android:layout_width="359dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelSpinner" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="196dp"
        android:layout_height="40dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="162dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTxt" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>